SampleForm and Login page